--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
+beautifulsoup4==4.9.3
 certifi==2021.5.30
 chardet==4.0.0
+click==8.0.1
 idna==2.10
+joblib==1.0.1
+nltk==3.6.2
+regex==2021.7.6
 requests==2.25.1
+soupsieve==2.2.1
+textblob==0.15.3
+tqdm==4.61.2
 urllib3==1.26.6
